src/storage-prometheus/overlays/dev/allow-mount-data.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: storage-prometheus
spec:
  template:
    spec:
      containers:
        - name: prometheus
          volumeMounts:
            - name: config
              mountPath: /etc/prometheus
            - name: data
              mountPath: /prometheus
      volumes:
        - name: config
          configMap:
            name: storage-prometheus
        - name: data
          hostPath:
            path: /tmp
            type: Directory
